# List

./: Cargo.toml
benches/: fixed.rs  resizable.rs  smallvec.rs  tinyvec.rs
src/: lib.rs
src/fixed/: collection.rs  into_iter.rs  mod.rs  test.rs
src/resizable/: collection.rs  into_iter.rs  mod.rs  test.rs
